--- a/web-interface/package.json
+++ b/web-interface/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.0",
     "@mui/system": "^5.1.0",
     "@testing-library/jest-dom": "^5.14.1",
