--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 *.zip
-janusgraph-0.5.3/
-janusgraph-full-0.5.3/
+janusgraph-*
 apache-cassandra-3.11.10/
 __pycache__/
 .vscode/
 log.txt
 *.png
 venv/
+node_modules/
+package*
+subgraph.pdf
