--- a/web-interface/package.json
+++ b/web-interface/package.json
@@ -16,7 +16,7 @@
     "http-proxy-middleware": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-flow-renderer": "^9.7.3",
+    "reactflow": "^11.5.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^1.1.2"
