--- a/web-interface/package.json
+++ b/web-interface/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.27.2",
     "dagre": "^0.8.5",
+    "moment": "^1.1.3",
     "http-proxy-middleware": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
