--- a/web-interface/package.json
+++ b/web-interface/package.json
@@ -16,9 +16,11 @@
     "http-proxy-middleware": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flow": "^1.0.3",
     "react-flow-renderer": "^9.7.3",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "reactflow": "^11.7.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
