--- a/web-interface/package.json
+++ b/web-interface/package.json
@@ -13,13 +13,14 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.27.2",
     "dagre": "^0.8.5",
-    "moment": "^1.1.3",
     "http-proxy-middleware": "^2.0.6",
+    "mdi-react": "^9.3.0",
+    "moment": "^1.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "reactflow": "^11.5.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "reactflow": "^11.5.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
