--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ exceptiongroup==1.2.0
 Flask==2.0.1
 frozenlist==1.4.1
 gremlinpython==3.5.3
+gunicorn==22.0.0
 idna==3.6
 igraph==0.11.3
 iniconfig==2.0.0
