--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,18 @@ services:
     networks:
       padloper-network:
         ipv4_address: 172.20.0.20
-
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    depends_on:
+      - flask-interface
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      padloper-network:
+        ipv4_address: 172.20.0.10
   web-interface:
     build: 
       context: .
