--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,17 @@
 server {
     listen 80;
 
-    location / {
+    location /api/ {
         proxy_pass http://flask-interface:4300;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Proxy requests to the web-interface frontend
+    location / {
+        proxy_pass http://web-interface:4301;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
